<resources>
    <string name="app_name">Discursos</string>
    <string name="title_home">Inicio</string>
    <string name="title_speakers">Oradores</string>
    <string name="title_conventions">Asambleas</string>

    <!--General-->
    <string name="text_list_empty">No hay ítems para mostrar</string>
    <string name="text_two_variable">%1$s %2$s</string>
    <string name="text_date">Fecha</string>
    <string name="text_cancel">Cancelar</string>
    <string name="text_accept">Aceptar</string>
    <string name="text_exit">Salir</string>
    <string name="text_save">Guardar</string>
    <string name="text_update">Actualizar</string>
    <string name="text_delete">Eliminar</string>
    <string name="text_confirm">Confirmar</string>
    <string name="text_next">Siguiente</string>
    <string name="text_back">Atrás</string>
    <string name="text_active">Activo</string>
    <string name="text_inactive">No disponible</string>
    <string name="msg_exit_dialog">Se perderá toda la información.\n¿Desea salir?</string>
    <string name="msg_delete_dialog">¿Desea eliminar esta información?</string>
    <string name="text_details">Detalles</string>
    <string name="text_select">Seleccionar</string>

    <!--Errors-->
    <string name="error_field_empty">Campo obligatorio</string>

    <!--Home-->
    <string name="text_assign_speakers">Asignar/Cambiar oradores</string>
    <string name="text_view_speakers">Ver oradores</string>
    <string name="text_assing_complete">Asignaciones de oradores completas</string>
    <string name="text_assing_incomplete">Faltan %1$s discursos por asignar</string>

    <!--Convention-->
    <string name="text_title">Título</string>
    <string name="text_no_dates">Sin fechas definidas</string>
    <string name="text_assign_dates">Asignar/Cambiar fechas</string>
    <string name="title_dialog_select_dates">Seleccione las fechas</string>

    <!--Speaker-->
    <string name="text_name">Nombre</string>
    <string name="text_section">Sección</string>
    <string name="text_section_a">Sección A</string>
    <string name="text_section_b">Sección B</string>
    <string name="text_congregation">Congregación</string>
    <string name="text_observations">Observaciones</string>
    <string name="text_speeches_assign">%1$s discursos asignados</string>
    <string name="text_not_speeches_assing">Sin asginaciones</string>
    <string name="text_assign_speech">Asignar discurso</string>
    <string name="text_view_details">Ver detalles</string>
    <string name="text_desable">Deshabilitar</string>
    <string name="text_enable">Habilitar</string>
    <string name="text_last_speech">Último discurso</string>

    <!--Assign-->
    <string name="title_select_convention">Seleccione la Asamblea</string>
    <string name="text_no_convention_to_assign">Asambleas concluidas. No hay disponibles para asignar</string>
    <string name="message_dialog_assign">¿Desea asignar %1$s a %2$s?</string>

    <!--View Speeches-->
    <string name="text_not_speech_assing">No asignado</string>
    <string name="text_viajante">Superintendente de Circuito</string>
    <string name="text_representante">Representante de la Sucursal</string>
</resources>