<com.google.android.material.card.MaterialCardView android:id="@+id/card_1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="24dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="24dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:cardElevation="8dp"
    app:strokeWidth="2dp"
    android:backgroundTint="?attr/colorOnSurfaceInverse"
    tools:targetApi="p"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <!-- Title, secondary and supporting text -->
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_title"
            android:textAppearance="?attr/textAppearanceHeadline6" />

        <TextView
            android:id="@+id/tv_section_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/text_section_a"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            android:textColor="?android:attr/textColorSecondary" />

        <TextView
            android:id="@+id/tv_section_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/text_section_b"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            android:textColor="?android:attr/textColorSecondary" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>